Completed the reveal on scroll behaviour

--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "postcss-mixins": "^5.4.1",
     "postcss-nested": "^1.0.0",
     "postcss-simple-vars": "^3.0.0",
+    "waypoint": "^0.2.8",
+    "waypoints": "^4.0.1",
     "webpack": "^2.2.1"
   }
 }
