--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "jquery": "^3.1.1",
     "jquery-smooth-scroll": "^2.1.2",
     "lazysizes": "^3.0.0-rc4",
-    "normalize.css": "^5.0.0"
+    "normalize.css": "^5.0.0",
+    "picturefill": "^3.0.2"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
@@ -15,9 +16,11 @@
     "browser-sync": "^2.18.7",
     "del": "^2.2.2",
     "gulp": "^3.9.1",
+    "gulp-modernizr": "^1.0.0-alpha",
     "gulp-postcss": "^6.3.0",
     "gulp-rename": "^1.2.2",
     "gulp-svg-sprite": "^1.3.1",
+    "gulp-svg2png": "^2.0.2",
     "gulp-watch": "^4.3.11",
     "jquery": "^3.1.1",
     "postcss-hexrgba": "^0.2.1",
@@ -25,7 +28,6 @@
     "postcss-mixins": "^5.4.1",
     "postcss-nested": "^1.0.0",
     "postcss-simple-vars": "^3.0.0",
-    "waypoint": "^0.2.8",
     "waypoints": "^4.0.1",
     "webpack": "^2.2.1"
   }
